# AI-task-manager

./: FULLSTACK_SETUP_GUIDE.md  README.md
backend/: pyproject.toml  requirements.txt  task_manager.db  test_ai_summarize.py  test_api.py  test_full.py
backend/server/: database.py  main.py
backend/server/ai/: models.py  prompt_builder.py  router.py  service.py
backend/server/auth/: models.py  router.py  store.py  utils.py
backend/server/tasks/: models.py  router.py  store.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Alert.css  Alert.jsx  Button.css  Button.jsx  Card.css  EditTaskForm.jsx  ErrorBoundary.jsx  Input.css  Input.jsx  Modal.jsx  Navbar.css  Navbar.jsx  ProtectedRoute.jsx  TaskForm.css  TaskForm.jsx  TaskItem.css  TaskItem.jsx
frontend/src/components/layout/: Footer.jsx  LandingNavbar.jsx  Section.jsx
frontend/src/components/sections/: CTA.jsx  FAQ.jsx  FeaturesShowcase.jsx  Hero.jsx  HowItWorks.jsx  Stats.jsx
frontend/src/components/ui/: Avatar.jsx  Badge.jsx  Button.jsx
frontend/src/contexts/: AuthContext.jsx  TasksContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useScroll.js
frontend/src/pages/: Auth.css  Dashboard.css  Dashboard.jsx  ForgotPassword.jsx  Landing.css  Landing.jsx  Login.jsx  ResetPassword.jsx  Signup.jsx
frontend/src/services/: api.js
